--- a/blog_single.html
+++ b/blog_single.html
@@ -36,7 +36,7 @@
                     <li class="sub_menu_parent"><a href="services.html">Services</a><i
                         class="fa-solid fa-caret-down"></i>
                       <ul class="submenu_ul">
-                        <li><a href="#">Service 1</a></li>
+                        <li><a href="critical_problem.html">Critical Problem Solution</a></li>
                         <li><a href="#">Service 2</a></li>
                         <li><a href="#">Service 3</a></li>
                         <li><a href="#">Service 4</a></li>
@@ -67,7 +67,7 @@
                         <li class="sub_menu_parent"><a href="services.html">Services</a><i
                             class="fa-solid fa-caret-down"></i>
                           <ul class="submenu_ul">
-                            <li><a href="#">Service 1</a></li>
+                            <li><a href="critical_problem.html">Critical Problem Solution</a></li>
                             <li><a href="#">Service 2</a></li>
                             <li><a href="#">Service 3</a></li>
                             <li><a href="#">Service 4</a></li>
@@ -95,7 +95,7 @@
           <div class="blog_single_overlay">
             <div class="container">
               <div class="row">
-                <div class="col-md-8 blog_details_side">       
+                <div class="col-md-8 blog_details_side">
                   <div class="blog_image_with_text">
                     <img src="assets/images/blog_single.png" alt="Details Image">
                     <h1 class="blog_heding">Blog Heading</h1>
@@ -131,49 +131,49 @@
                       iusto minus commodi facilis ad eius obcaecati rem aut nemo. Accusamus, iure? Pariatur, tenetur
                       quidem ea
                       perspiciatis veniam esse repellendus illum deserunt corrupti nam qui.</p>
-                <div class="col-md-12 bs_boxes_parent">
-                  <div class="col-md-6 blog_single_page_boxes">
-                    <div class="bs_icon">
-                      <i class="fa-solid fa-person-dress-burst"></i>
+                    <div class="col-md-12 bs_boxes_parent">
+                      <div class="col-md-6 blog_single_page_boxes">
+                        <div class="bs_icon">
+                          <i class="fa-solid fa-person-dress-burst"></i>
+                        </div>
+                        <div class="bs_text">
+                          <h2 class="bs-text-h">Our Sucess Team Man</h2>
+                        </div>
+                      </div>
+                      <div class="col-md-6 blog_single_page_boxes">
+                        <div class="bs_icon">
+                          <i class="fa-solid fa-person-dress-burst"></i>
+                        </div>
+                        <div class="bs_text">
+                          <h2 class="bs-text-h">Our Sucess Team Man</h2>
+                        </div>
+                      </div>
+                      <div class="col-md-6 blog_single_page_boxes">
+                        <div class="bs_icon">
+                          <i class="fa-solid fa-person-dress-burst"></i>
+                        </div>
+                        <div class="bs_text">
+                          <h2 class="bs-text-h">Our Sucess Team Man</h2>
+                        </div>
+                      </div>
+                      <div class="col-md-6 blog_single_page_boxes">
+                        <div class="bs_icon">
+                          <i class="fa-solid fa-person-dress-burst"></i>
+                        </div>
+                        <div class="bs_text">
+                          <h2 class="bs-text-h">Our Sucess Team Man</h2>
+                        </div>
+                      </div>
                     </div>
-                    <div class="bs_text">
-                      <h2 class="bs-text-h">Our Sucess Team Man</h2>
-                    </div>                        
-                  </div>
-                  <div class="col-md-6 blog_single_page_boxes">
-                    <div class="bs_icon">
-                      <i class="fa-solid fa-person-dress-burst"></i>
-                    </div>
-                    <div class="bs_text">
-                      <h2 class="bs-text-h">Our Sucess Team Man</h2>
-                    </div>                        
-                  </div>
-                  <div class="col-md-6 blog_single_page_boxes">
-                    <div class="bs_icon">
-                      <i class="fa-solid fa-person-dress-burst"></i>
-                    </div>
-                    <div class="bs_text">
-                      <h2 class="bs-text-h">Our Sucess Team Man</h2>
-                    </div>                        
-                  </div>
-                  <div class="col-md-6 blog_single_page_boxes">
-                    <div class="bs_icon">
-                      <i class="fa-solid fa-person-dress-burst"></i>
-                    </div>
-                    <div class="bs_text">
-                      <h2 class="bs-text-h">Our Sucess Team Man</h2>
-                    </div>                        
-                  </div>
-                </div>
-                <p class="blog_details_text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia modi
-                  natus
-                  animi reiciendis, cum laudantium expedita ullam ad asperiores dolor dolores neque? Harum
-                  voluptate,
-                  omnis
-                  magnam ea, et veniam aliquid rem ipsa dolores asperiores voluptatum distinctio nostrum eum
-                  exercitationem
-                  eaque sequi illum repudiandae nihil ullam voluptatibus dolor deserunt. Earum, voluptatem? Lorem
-                  ipsum.</p>
+                    <p class="blog_details_text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia modi
+                      natus
+                      animi reiciendis, cum laudantium expedita ullam ad asperiores dolor dolores neque? Harum
+                      voluptate,
+                      omnis
+                      magnam ea, et veniam aliquid rem ipsa dolores asperiores voluptatum distinctio nostrum eum
+                      exercitationem
+                      eaque sequi illum repudiandae nihil ullam voluptatibus dolor deserunt. Earum, voluptatem? Lorem
+                      ipsum.</p>
                   </div>
                 </div>
                 <div class="col-md-4 blog_side_bar">
@@ -284,92 +284,92 @@
                 <!-- blog single page section end -->
               </div>
             </div>
-          </div>    
-      </section>
+          </div>
+        </section>
+      </div>
     </div>
-  </div>
-  <!-- footer section start -->
-  <footer style="background-image: url(assets/images/hd_ft.avif);">
-    <div class="foote_overlay">
-      <div class="main_footer">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-4 cyber_heding_sec">
-              <div class="header_left footer_cyber_logo">
-                <img class="cyber_logo" src="assets/images/hdr_logo.png" alt="Cyber Jet Logo"> <span
-                  class="cyber_jet">Cyber<b>Jet</b> </span>
-              </div>
-              <p class="bannar_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum quia atque
-                accusamus iste provident nisi, ad corrupti culpa officiis dolore modi, excepturi non molestiae
-                facilis
-                dignissimos veniam fugiat.</p>
-            </div>
-            <div class="col-md-2">
-              <h2 class="foooter_about_us">
-                About Us
-              </h2>
-              <ul class="who_we_are_ul">
-                <li> <a href="about.html">About us</a>
-                </li>
-                <li> <a href="services.html">Services </a>
-                </li>
-                <li> <a href="our_team.html">Our Team</a> </li>
-                <li> <a href="pricing.html">Pricing</a>
-                </li>
-                <li> <a href="blog.html">Blog</a>
-                </li>
-                <li> <a href="pricing.html">Pricing</a>
-                </li>
-                <li> <a href="contact.html">Contact Us</a>
-                </li>
-
-              </ul>
-            </div>
-            <div class="col-md-2 our_services">
-              <h2 class="foooter_about_us">
-                Our Services
-              </h2>
-              <ul class="who_we_are_ul">
-                <li> <a href="#">121 King street melbourne,</a>
-                </li>
-                <li> <a href="#">3000 Australia</a>
-                </li>
-                <li> <a href="#">info@cyberjet.com</a>
-                </li>
-                <li> <a href="#">+123456789</a>
-                </li>
-              </ul>
-              <div class="social_icons_footer">
-                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                <a href="#"><i class="fa-brands fa-instagram"></i></a>
-              </div>
-            </div>
-            <div class="col-md-4 sing_up_newsletter">
-              <h2 class="foooter_about_us">
-                Sing Up For Newsletter
-              </h2>
-              <form action="#" method="post">
-                <div class="input_email">
-                  <input type="email" name="useremail" placeholder="Enter your email"><i
-                    class="fa-solid fa-paper-plane"></i>
+    <!-- footer section start -->
+    <footer style="background-image: url(assets/images/hd_ft.avif);">
+      <div class="foote_overlay">
+        <div class="main_footer">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-4 cyber_heding_sec">
+                <div class="header_left footer_cyber_logo">
+                  <img class="cyber_logo" src="assets/images/hdr_logo.png" alt="Cyber Jet Logo"> <span
+                    class="cyber_jet">Cyber<b>Jet</b> </span>
                 </div>
+                <p class="bannar_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum quia atque
+                  accusamus iste provident nisi, ad corrupti culpa officiis dolore modi, excepturi non molestiae
+                  facilis
+                  dignissimos veniam fugiat.</p>
+              </div>
+              <div class="col-md-2">
+                <h2 class="foooter_about_us">
+                  About Us
+                </h2>
+                <ul class="who_we_are_ul">
+                  <li> <a href="about.html">About us</a>
+                  </li>
+                  <li> <a href="services.html">Services </a>
+                  </li>
+                  <li> <a href="our_team.html">Our Team</a> </li>
+                  <li> <a href="pricing.html">Pricing</a>
+                  </li>
+                  <li> <a href="blog.html">Blog</a>
+                  </li>
+                  <li> <a href="pricing.html">Pricing</a>
+                  </li>
+                  <li> <a href="contact.html">Contact Us</a>
+                  </li>
 
-                <div class="input_checkbox"> <input type="checkbox" id="terms"> <label for="terms"> i agree to the
-                    terms,Privecy Policy </label> </div>
-              </form>
+                </ul>
+              </div>
+              <div class="col-md-2 our_services">
+                <h2 class="foooter_about_us">
+                  Our Services
+                </h2>
+                <ul class="who_we_are_ul">
+                  <li> <a href="#">121 King street melbourne,</a>
+                  </li>
+                  <li> <a href="#">3000 Australia</a>
+                  </li>
+                  <li> <a href="#">info@cyberjet.com</a>
+                  </li>
+                  <li> <a href="#">+123456789</a>
+                  </li>
+                </ul>
+                <div class="social_icons_footer">
+                  <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                  <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                  <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                </div>
+              </div>
+              <div class="col-md-4 sing_up_newsletter">
+                <h2 class="foooter_about_us">
+                  Sing Up For Newsletter
+                </h2>
+                <form action="#" method="post">
+                  <div class="input_email">
+                    <input type="email" name="useremail" placeholder="Enter your email"><i
+                      class="fa-solid fa-paper-plane"></i>
+                  </div>
+
+                  <div class="input_checkbox"> <input type="checkbox" id="terms"> <label for="terms"> i agree to the
+                      terms,Privecy Policy </label> </div>
+                </form>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="footer_ending">
-        <div class="container">
-          <p class="bannar_text">Cyberjet Copyright @ 2023. All Right Reserved.</p>
+        <div class="footer_ending">
+          <div class="container">
+            <p class="bannar_text">Cyberjet Copyright @ 2023. All Right Reserved.</p>
+          </div>
         </div>
       </div>
-    </div>
-  </footer>
-  <!-- footer section end -->
+    </footer>
+    <!-- footer section end -->
   </div>
   <!-- mmenu js start -->
   <script src="assets/js/mmenu-light.js"></script>
