--- a/critical_problem.html
+++ b/critical_problem.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Our Team</title>
+  <title>Critical Problem Solution</title>
   <link rel="preload" href="assets/fonts" as="font" crossorigin="anonymous">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
@@ -138,94 +138,124 @@
                 </div>
               </header>
               <!-- header section end -->
-              <!-- our team section start -->
-              <section class="partner_section what_we_do about_us our_team our_news our_blog">
+              <!-- critical problem solution section start -->
+              <section class="partner_section what_we_do about_us our_team our_news our_blog critical_problem_solution">
                 <div class="partner_overlay">
                   <div class="container">
-                    <div class="row">                    
-                        <p class="bannar_text abut_text">OUR LARGEST BLOG</p>
-                        <h4 class="wer_working_with">Latest News From The Blog</h4>                                           
-                        <div class="row our_team_row">
-                          <div class="col-md-4">
-                            <a href="blog_single.html"> <img src="assets/images/blog.jpg" alt="Cyber jet blog"></a>
-                            <div class="our_team_info">
-                              <h2 class="our_team_heading">
-                                <a href="blog_single.html" style="text-decoration: none;"> Blog Title</a>
-                              </h2>
-                              <p class="card-text">Three Factors that Make Honeywell Productivity Solutions Different
-                              </p>
-                              <a href="blog_single.html" class="card-link">Read More <i
-                                  class="fa-solid fa-angle-right"></i></a>
+                    <div class="row">
+                      <!-- <p class="bannar_text abut_text">OUR LARGEST BLOG</p> -->
+                      <h4 class="wer_working_with">Critical Problem Solution</h4>
+                      <div class="row our_team_row">
+                        <div class="col-md-4 blog_side_bar">
+                          <div class="latest_tweets side_bar_search">
+                            <h2 class="latest_tweets_heding">SEARCH</h2>
+                            <div class="tag_box">
+                              <input type="search" name="search" placeholder="Search">
+                              <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
                             </div>
-                          </div>
-                          <div class="col-md-4">
-                            <a href="blog_single.html"> <img src="assets/images/blog.jpg" alt="Cyber jet blog"></a>
-                            <div class="our_team_info">
-                              <h2 class="our_team_heading">
-                                <a href="blog_single.html" style="text-decoration: none;"> Blog Title</a>
-                              </h2>
-                              <p class="card-text">Three Factors that Make Honeywell Productivity Solutions Different
-                              </p>
-                              <a href="blog_single.html" class="card-link">Read More <i
-                                  class="fa-solid fa-angle-right"></i></a>
+                          </div>                     
+                          <div class="latest_tweets categories">
+                            <h2 class="latest_tweets_heding">Problem</h2>
+                            <div class="latest_tweet_box">
+                              <div class="latest_tweet_description">
+                                <a href="#" class="latest_tweet_para">Web</a>
+                              </div>
+                              <div class="latest_tweet_description">
+                                <a href="#" class="latest_tweet_para">Cyber Security</a>
+                              </div>
+                              <div class="latest_tweet_description">
+                                <a href="#" class="latest_tweet_para">Grapics Design Related</a>
+                              </div>
+                              <div class="latest_tweet_description">
+                                <a href="#" class="latest_tweet_para">Digital Marketing Related</a>
+                              </div>
+                              <div class="latest_tweet_description">
+                                <a href="#" class="latest_tweet_para">Data Base Related</a>
+                              </div>
                             </div>
-                          </div>
-                          <div class="col-md-4">
-                            <a href="blog_single.html"> <img src="assets/images/blog.jpg" alt="Cyber jet blog"></a>
-                            <div class="our_team_info">
-                              <h2 class="our_team_heading">
-                                <a href="blog_single.html" style="text-decoration: none;"> Blog Title</a>
-                              </h2>
-                              <p class="card-text">Three Factors that Make Honeywell Productivity Solutions Different
-                              </p>
-                              <a href="blog_single.html" class="card-link">Read More <i
-                                  class="fa-solid fa-angle-right"></i></a>
-                            </div>
-                          </div>
-                          <div class="col-md-4">
-                            <a href="blog_single.html"> <img src="assets/images/blog.jpg" alt="Cyber jet blog"></a>
-                            <div class="our_team_info">
-                              <h2 class="our_team_heading">
-                                <a href="blog_single.html" style="text-decoration: none;"> Blog Title</a>
-                              </h2>
-                              <p class="card-text">Three Factors that Make Honeywell Productivity Solutions Different
-                              </p>
-                              <a href="blog_single.html" class="card-link">Read More <i
-                                  class="fa-solid fa-angle-right"></i></a>
-                            </div>
-                          </div>
-                          <div class="col-md-4">
-                            <a href="blog_single.html"> <img src="assets/images/blog.jpg" alt="Cyber jet blog"></a>
-                            <div class="our_team_info">
-                              <h2 class="our_team_heading">
-                                <a href="blog_single.html" style="text-decoration: none;"> Blog Title</a>
-                              </h2>
-                              <p class="card-text">Three Factors that Make Honeywell Productivity Solutions Different
-                              </p>
-                              <a href="blog_single.html" class="card-link">Read More <i
-                                  class="fa-solid fa-angle-right"></i></a>
-                            </div>
-                          </div>
-                          <div class="col-md-4">
-                            <a href="blog_single.html"> <img src="assets/images/blog.jpg" alt="Cyber jet blog"></a>
-                            <div class="our_team_info">
-                              <h2 class="our_team_heading">
-                                <a href="blog_single.html" style="text-decoration: none;"> Blog Title</a>
-                              </h2>
-                              <p class="card-text">Three Factors that Make Honeywell Productivity Solutions Different
-                              </p>
-                              <a href="blog_single.html" class="card-link">Read More <i
-                                  class="fa-solid fa-angle-right"></i></a>
-                            </div>
-                          </div>
-
+                          </div>                       
                         </div>
-                      </div>   
+                        <div class="col-md-8 critical_problem_archive">
+                          <div class="col-md-6">
+                            <a href="blog_single.html"> <img src="assets/images/cps.avif" alt="Cyber jet blog"></a>
+                            <div class="our_team_info">
+                              <h2 class="our_team_heading">
+                                <a href="blog_single.html" style="text-decoration: none;"> Problem Name</a>
+                              </h2>
+                              <p class="card-text">Three Factors that Make Honeywell Productivity Solutions Different
+                              </p>
+                              <a href="blog_single.html" class="card-link">Solution <i
+                                  class="fa-solid fa-angle-right"></i></a>
+                            </div>
+                          </div>
+                          <div class="col-md-6">
+                            <a href="blog_single.html"> <img src="assets/images/cps.avif" alt="Cyber jet blog"></a>
+                            <div class="our_team_info">
+                              <h2 class="our_team_heading">
+                                <a href="blog_single.html" style="text-decoration: none;"> Problem Name</a>
+                              </h2>
+                              <p class="card-text">Three Factors that Make Honeywell Productivity Solutions Different
+                              </p>
+                              <a href="blog_single.html" class="card-link">Solution <i
+                                  class="fa-solid fa-angle-right"></i></a>
+                            </div>
+                          </div>
+                          <div class="col-md-6">
+                            <a href="blog_single.html"> <img src="assets/images/cps.avif" alt="Cyber jet blog"></a>
+                            <div class="our_team_info">
+                              <h2 class="our_team_heading">
+                                <a href="blog_single.html" style="text-decoration: none;"> Problem Name</a>
+                              </h2>
+                              <p class="card-text">Three Factors that Make Honeywell Productivity Solutions Different
+                              </p>
+                              <a href="blog_single.html" class="card-link">Solution <i
+                                  class="fa-solid fa-angle-right"></i></a>
+                            </div>
+                          </div>
+                          <div class="col-md-6">
+                            <a href="blog_single.html"> <img src="assets/images/cps.avif" alt="Cyber jet blog"></a>
+                            <div class="our_team_info">
+                              <h2 class="our_team_heading">
+                                <a href="blog_single.html" style="text-decoration: none;"> Problem Name</a>
+                              </h2>
+                              <p class="card-text">Three Factors that Make Honeywell Productivity Solutions Different
+                              </p>
+                              <a href="blog_single.html" class="card-link">Solution <i
+                                  class="fa-solid fa-angle-right"></i></a>
+                            </div>
+                          </div>
+                          <div class="col-md-6">
+                            <a href="blog_single.html"> <img src="assets/images/cps.avif" alt="Cyber jet blog"></a>
+                            <div class="our_team_info">
+                              <h2 class="our_team_heading">
+                                <a href="blog_single.html" style="text-decoration: none;"> Problem Name</a>
+                              </h2>
+                              <p class="card-text">Three Factors that Make Honeywell Productivity Solutions Different
+                              </p>
+                              <a href="blog_single.html" class="card-link">Solution <i
+                                  class="fa-solid fa-angle-right"></i></a>
+                            </div>
+                          </div>
+                          <div class="col-md-6">
+                            <a href="blog_single.html"> <img src="assets/images/cps.avif" alt="Cyber jet blog"></a>
+                            <div class="our_team_info">
+                              <h2 class="our_team_heading">
+                                <a href="blog_single.html" style="text-decoration: none;"> Problem Name</a>
+                              </h2>
+                              <p class="card-text">Three Factors that Make Honeywell Productivity Solutions Different
+                              </p>
+                              <a href="blog_single.html" class="card-link">Solution <i
+                                  class="fa-solid fa-angle-right"></i></a>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </div>
             </div>
             </section>
-            <!-- our team section end -->
+            <!-- critical problem solution section end -->
           </div>
         </div>
       </div>
