--- a/home.html
+++ b/home.html
@@ -120,7 +120,7 @@
                           <li class="sub_menu_parent"><a href="services.html">Services</a><i
                               class="fa-solid fa-caret-down"></i>
                             <ul class="submenu_ul">
-                              <li><a href="#">Service 1</a></li>
+                              <li><a href="critical_problem.html">Critical Problem Solution</a></li>
                               <li><a href="#">Service 2</a></li>
                               <li><a href="#">Service 3</a></li>
                               <li><a href="#">Service 4</a></li>
@@ -152,7 +152,7 @@
                               <li class="sub_menu_parent"><a href="services.html">Services</a><i
                                   class="fa-solid fa-caret-down"></i>
                                 <ul class="submenu_ul">
-                                  <li><a href="#">Service 1</a></li>
+                                  <li><a href="critical_problem.html">Critical Problem Solution</a></li>
                                   <li><a href="#">Service 2</a></li>
                                   <li><a href="#">Service 3</a></li>
                                   <li><a href="#">Service 4</a></li>
