--- a/services.html
+++ b/services.html
@@ -14,7 +14,6 @@
   <link rel="stylesheet" href="assets/css/mmenu-light.css">
   <!-- mmenu css end -->
 </head>
-
 <body>
   <div class="main">
     <div class="header_bannar_bg_img" style="background-image: url(assets/images/hd_ft.avif)">
@@ -34,7 +33,7 @@
                     <li><a href="about.html">About Us</a></li>                  
                     <li class="sub_menu_parent"><a href="services.html">Services</a><i class="fa-solid fa-caret-down"></i>
                       <ul class="submenu_ul">
-                        <li><a href="#">Service 1</a></li>
+                        <li><a href="critical_problem.html">Critical Problem Solution</a></li>
                         <li><a href="#">Service 2</a></li>
                         <li><a href="#">Service 3</a></li>
                         <li><a href="#">Service 4</a></li>
@@ -65,7 +64,7 @@
                         <li><a href="about.html">About Us</a></li>                  
                         <li class="sub_menu_parent"><a href="services.html">Services</a><i class="fa-solid fa-caret-down"></i>
                           <ul class="submenu_ul">
-                            <li><a href="#">Service 1</a></li>
+                            <li><a href="critical_problem.html">Critical Problem Solution</a></li>
                             <li><a href="#">Service 2</a></li>
                             <li><a href="#">Service 3</a></li>
                             <li><a href="#">Service 4</a></li>
