--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
                     <li><a href="about.html">About Us</a></li>                  
                     <li class="sub_menu_parent"><a href="services.html">Services</a><i class="fa-solid fa-caret-down"></i>
                       <ul class="submenu_ul">
-                        <li><a href="#">Service 1</a></li>
+                        <li><a href="critical_problem.html">Critical Problem Solution</a></li>
                         <li><a href="#">Service 2</a></li>
                         <li><a href="#">Service 3</a></li>
                         <li><a href="#">Service 4</a></li>
@@ -64,7 +64,7 @@
                         <li><a href="about.html">About Us</a></li>                  
                         <li class="sub_menu_parent"><a href="services.html">Services</a><i class="fa-solid fa-caret-down"></i>
                           <ul class="submenu_ul">
-                            <li><a href="#">Service 1</a></li>
+                            <li><a href="critical_problem.html">Critical Problem Solution</a></li>
                             <li><a href="#">Service 2</a></li>
                             <li><a href="#">Service 3</a></li>
                             <li><a href="#">Service 4</a></li>
