--- a/hire.html
+++ b/hire.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Our Team</title>
+  <title>Hire</title>
   <link rel="preload" href="assets/fonts" as="font" crossorigin="anonymous">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
@@ -73,7 +73,7 @@
                     <li><a href="about.html">About Us</a></li>                  
                     <li class="sub_menu_parent"><a href="services.html">Services</a><i class="fa-solid fa-caret-down"></i>
                       <ul class="submenu_ul">
-                        <li><a href="#">Service 1</a></li>
+                        <li><a href="critical_problem.html">Critical Problem Solution</a></li>
                         <li><a href="#">Service 2</a></li>
                         <li><a href="#">Service 3</a></li>
                         <li><a href="#">Service 4</a></li>
