blog details page

--- a/home.html
+++ b/home.html
@@ -202,7 +202,7 @@
     </div>
     <div class="partner_to_what_we_do_bgimage" style="background-image: url(assets/images/bg2.png);">
       <div class="partner_to_what_we_do_overlay">
-        <!-- partner section start -->
+        <!-- need help section start -->
         <section class="partner_section emergence_need_help">
           <div class="partner_overlay">
             <div class="container">
@@ -217,7 +217,7 @@
             </div>
           </div>
         </section>
-        <!-- partner section end -->
+        <!-- need help section end -->
         <!-- partner section start -->
         <section class="partner_section">
           <div class="partner_overlay">
