--- a/blog_single.html
+++ b/blog_single.html
@@ -97,7 +97,7 @@
               <div class="row">
                 <div class="col-md-8 blog_details_side">
                   <div class="blog_image_with_text">
-                    <img src="assets/images/blog_single.png" alt="Details Image">
+                    <img src="assets/images/blg_sngl.webp" alt="Details Image">
                     <h1 class="blog_heding">Blog Heading</h1>
                     <h3 class="text_over_image"> dolor sit amet consectetur adipisicing elit. Ad laboriosam quos vero!
                       Lorem
