--- a/hire.html
+++ b/hire.html
@@ -65,13 +65,14 @@
                 <div class="header_left">
                   <img class="cyber_logo" src="assets/images/hdr_logo.png" alt="Cyber Jet Logo"> <span
                     class="cyber_jet">Cyber<b>Jet</b> </span>
-                    <div class="for_darkmood"> <img src="assets/images/moon.png" id="moon_png" alt="For dark mood"></div>
+                  <div class="for_darkmood"> <img src="assets/images/moon.png" id="moon_png" alt="For dark mood"></div>
                 </div>
                 <div class="header_menu">
                   <ul>
                     <li><a href="home.html">Home</a></li>
-                    <li><a href="about.html">About Us</a></li>                  
-                    <li class="sub_menu_parent"><a href="services.html">Services</a><i class="fa-solid fa-caret-down"></i>
+                    <li><a href="about.html">About Us</a></li>
+                    <li class="sub_menu_parent"><a href="services.html">Services</a><i
+                        class="fa-solid fa-caret-down"></i>
                       <ul class="submenu_ul">
                         <li><a href="critical_problem.html">Critical Problem Solution</a></li>
                         <li><a href="#">Service 2</a></li>
@@ -79,9 +80,9 @@
                         <li><a href="#">Service 4</a></li>
                       </ul>
                     </li>
-                    <li><a href="pricing.html">Pricing</a></li>                 
-                    <li><a href="blog.html">Blog</a></li>                 
-                    <li><a href="hire.html">Hire</a></li>               
+                    <li><a href="pricing.html">Pricing</a></li>
+                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="hire.html">Hire</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                   </ul>
                 </div>
@@ -101,8 +102,9 @@
                       </ul> -->
                       <ul>
                         <li><a href="home.html">Home</a></li>
-                        <li><a href="about.html">About Us</a></li>                  
-                        <li class="sub_menu_parent"><a href="services.html">Services</a><i class="fa-solid fa-caret-down"></i>
+                        <li><a href="about.html">About Us</a></li>
+                        <li class="sub_menu_parent"><a href="services.html">Services</a><i
+                            class="fa-solid fa-caret-down"></i>
                           <ul class="submenu_ul">
                             <li><a href="critical_problem.html">Critical Problem Solution</a></li>
                             <li><a href="#">Service 2</a></li>
@@ -110,9 +112,9 @@
                             <li><a href="#">Service 4</a></li>
                           </ul>
                         </li>
-                        <li><a href="pricing.html">Pricing</a></li>                 
-                        <li><a href="blog.html">Blog</a></li>                 
-                        <li><a href="hire.html">Hire</a></li>               
+                        <li><a href="pricing.html">Pricing</a></li>
+                        <li><a href="blog.html">Blog</a></li>
+                        <li><a href="hire.html">Hire</a></li>
                         <li><a href="contact.html">Contact Us</a></li>
                       </ul>
                     </nav>
@@ -133,79 +135,97 @@
                 <p class="bannar_text abut_text">Dolor sit amet consectetur adipisicing elit. Illum quia atque
                   accusamus iste provident nisi, ad corrupti culpa officiis dolore modi, excepturi non molestiae
                   facilis.</p>
-                <div class="row our_team_row">
+                <div class="row our_team_row">       
                   <div class="col-md-4">
-                    <img src="assets/images/news1.avif" alt="Eleten Rampel">
+                    <a href="team_details.html">
+                      <img src="assets/images/news1.avif" alt="Eleten Rampel">
+                    </a>
                     <div class="our_team_info">
-                      <h2 class="our_team_heading">
-                        Eleten Rampel
-                      </h2>
+                      <a href="team_details.html">
+                        <h2 class="our_team_heading">
+                          Eleten Rampel
+                        </h2>
+                      </a>
                       <p class="card-text">Programmer</p>
-                      <a href="#" class="card-link"><i class="fa-brands fa-facebook-f"></i></a>
-                      <a href="#" class="card-link"> <i class="fa-brands fa-twitter"></i></a>
-                      <a href="#" class="card-link"> <i class="fa-brands fa-instagram"></i></a>
+                      <a href="team_details.html" class="hire_view_details">View Details <i
+                          class="fa-solid fa-angle-right"></i></a>
                     </div>
-                  </div>
+                  </div>       
                   <div class="col-md-4">
-                    <img src="assets/images/news1.avif" alt="Eleten Rampel">
+                    <a href="team_details.html">
+                      <img src="assets/images/news1.avif" alt="Eleten Rampel">
+                    </a>
                     <div class="our_team_info">
-                      <h2 class="our_team_heading">
-                        Eleten Rampel
-                      </h2>
+                      <a href="team_details.html">
+                        <h2 class="our_team_heading">
+                          Eleten Rampel
+                        </h2>
+                      </a>
                       <p class="card-text">Programmer</p>
-                      <a href="#" class="card-link"><i class="fa-brands fa-facebook-f"></i></a>
-                      <a href="#" class="card-link"> <i class="fa-brands fa-twitter"></i></a>
-                      <a href="#" class="card-link"> <i class="fa-brands fa-instagram"></i></a>
+                      <a href="team_details.html" class="hire_view_details">View Details <i
+                          class="fa-solid fa-angle-right"></i></a>
                     </div>
-                  </div>
+                  </div>       
                   <div class="col-md-4">
-                    <img src="assets/images/news1.avif" alt="Eleten Rampel">
+                    <a href="team_details.html">
+                      <img src="assets/images/news1.avif" alt="Eleten Rampel">
+                    </a>
                     <div class="our_team_info">
-                      <h2 class="our_team_heading">
-                        Eleten Rampel
-                      </h2>
+                      <a href="team_details.html">
+                        <h2 class="our_team_heading">
+                          Eleten Rampel
+                        </h2>
+                      </a>
                       <p class="card-text">Programmer</p>
-                      <a href="#" class="card-link"><i class="fa-brands fa-facebook-f"></i></a>
-                      <a href="#" class="card-link"> <i class="fa-brands fa-twitter"></i></a>
-                      <a href="#" class="card-link"> <i class="fa-brands fa-instagram"></i></a>
+                      <a href="team_details.html" class="hire_view_details">View Details <i
+                          class="fa-solid fa-angle-right"></i></a>
                     </div>
-                  </div>
+                  </div>       
                   <div class="col-md-4">
-                    <img src="assets/images/news1.avif" alt="Eleten Rampel">
+                    <a href="team_details.html">
+                      <img src="assets/images/news1.avif" alt="Eleten Rampel">
+                    </a>
                     <div class="our_team_info">
-                      <h2 class="our_team_heading">
-                        Eleten Rampel
-                      </h2>
+                      <a href="team_details.html">
+                        <h2 class="our_team_heading">
+                          Eleten Rampel
+                        </h2>
+                      </a>
                       <p class="card-text">Programmer</p>
-                      <a href="#" class="card-link"><i class="fa-brands fa-facebook-f"></i></a>
-                      <a href="#" class="card-link"> <i class="fa-brands fa-twitter"></i></a>
-                      <a href="#" class="card-link"> <i class="fa-brands fa-instagram"></i></a>
+                      <a href="team_details.html" class="hire_view_details">View Details <i
+                          class="fa-solid fa-angle-right"></i></a>
                     </div>
-                  </div>
+                  </div>       
                   <div class="col-md-4">
-                    <img src="assets/images/news1.avif" alt="Eleten Rampel">
+                    <a href="team_details.html">
+                      <img src="assets/images/news1.avif" alt="Eleten Rampel">
+                    </a>
                     <div class="our_team_info">
-                      <h2 class="our_team_heading">
-                        Eleten Rampel
-                      </h2>
+                      <a href="team_details.html">
+                        <h2 class="our_team_heading">
+                          Eleten Rampel
+                        </h2>
+                      </a>
                       <p class="card-text">Programmer</p>
-                      <a href="#" class="card-link"><i class="fa-brands fa-facebook-f"></i></a>
-                      <a href="#" class="card-link"> <i class="fa-brands fa-twitter"></i></a>
-                      <a href="#" class="card-link"> <i class="fa-brands fa-instagram"></i></a>
+                      <a href="team_details.html" class="hire_view_details">View Details <i
+                          class="fa-solid fa-angle-right"></i></a>
                     </div>
-                  </div>
+                  </div>       
                   <div class="col-md-4">
-                    <img src="assets/images/news1.avif" alt="Eleten Rampel">
+                    <a href="team_details.html">
+                      <img src="assets/images/news1.avif" alt="Eleten Rampel">
+                    </a>
                     <div class="our_team_info">
-                      <h2 class="our_team_heading">
-                        Eleten Rampel
-                      </h2>
+                      <a href="team_details.html">
+                        <h2 class="our_team_heading">
+                          Eleten Rampel
+                        </h2>
+                      </a>
                       <p class="card-text">Programmer</p>
-                      <a href="#" class="card-link"><i class="fa-brands fa-facebook-f"></i></a>
-                      <a href="#" class="card-link"> <i class="fa-brands fa-twitter"></i></a>
-                      <a href="#" class="card-link"> <i class="fa-brands fa-instagram"></i></a>
+                      <a href="team_details.html" class="hire_view_details">View Details <i
+                          class="fa-solid fa-angle-right"></i></a>
                     </div>
-                  </div>
+                  </div>       
                 </div>
               </div>
             </div>
@@ -278,7 +298,7 @@
                 <form action="#" method="post">
                   <div class="input_email">
                     <input type="email" name="useremail" placeholder="Enter your email"><i
-                    class="fa-solid fa-paper-plane"></i>
+                      class="fa-solid fa-paper-plane"></i>
                   </div>
 
                   <div class="input_checkbox"> <input type="checkbox" id="terms"> <label for="terms"> i agree to the
@@ -328,8 +348,7 @@
         infinite: true,
         slidesToShow: 2,
         slidesToScroll: 2,
-        responsive: [
-          {
+        responsive: [{
             breakpoint: 768,
             settings: {
               slidesToShow: 1,
@@ -359,16 +378,16 @@
   <!-- slick js end -->
   <!-- main js start -->
   <script src="assets/js/main.js"></script>
-    <!-- main js end -->
-    <!-- dark mood js start -->
+  <!-- main js end -->
+  <!-- dark mood js start -->
   <script>
     var moon_png = document.getElementById("moon_png");
-    moon_png.onclick = function(){
+    moon_png.onclick = function () {
       document.body.classList.toggle("dark_theme");
-      if(document.body.classList.contains("dark_theme")){
-        moon_png.src="assets/images/sun.png";
-      }else{
-        moon_png.src="assets/images/moon.png";
+      if (document.body.classList.contains("dark_theme")) {
+        moon_png.src = "assets/images/sun.png";
+      } else {
+        moon_png.src = "assets/images/moon.png";
       }
     }
   </script>
